src/frontend/src/style.css
/* ... */
textarea:focus,
input:focus {
    outline: none;
}

a.accent,
.accent {
    color: $accent;
}

button.accent,
button.active {
    border: 2px solid #000000;
    transform: skew(-10deg);
}

.vertically_spaced {
    margin-top: 2em;
    margin-bottom: 2em;
}

.active path {
    fill: black;
}

.accent path {
    fill: $accent;
}

.action path {
    fill: $clickable;
}

.clickable_color {
    color: $clickable;
}

.clickable {
    cursor: pointer;
}

.right_spaced {
    margin-right: 1rem;
}
.right_half_spaced {
    margin-right: 0.5rem;
}

.right_quarter_spaced {
    margin-right: 0.25rem;
}

.left_well_spaced {
    margin-left: 0.8rem;
}

.left_spaced {
    margin-left: 0.5rem;
}

.left_half_spaced {
    margin-left: 0.5rem;
}

.bottom_half_spaced {
    margin-bottom: 0.3em;
}

.top_spaced {
    margin-top: 1em;
}
.top_half_spaced {
    margin-top: 0.3em;
}

::placeholder {
    color: $text;
    opacity: 0.6;
}

#upgrade_banner {
    display: none;
    cursor: pointer;
}

.banner a,
.banner h3,
.banner h4 {
    color: black;
}

.banner a {
    text-decoration: underline;
}

.banner {
    background: $accent;
    color: black;
}

.banner,
.controversial,
.nsfw {
    text-align: center;
}

.comment .banner,
.comment .nsfw,
.comment .controversial,
.comment .deleted {
    margin: 1rem;
}

.banner,
.nsfw,
.controversial,
.deleted {
    padding: 1em;
}

.nsfw,
.controversial {
    color: $clickable;
}

.deleted {
    background: $frame;
}

.active {
    background: $accent;
    color: #111111;
    border: 2px solid #000000;
    transform: skew(-10deg);
}

/* Hide the reaction progress indicator when not in use */
.active[style*="width: 0"] {
    border: none;
    background: none;
}

.iconed {
    white-space: nowrap;
    margin: 0.5em;
    justify-self: center;
    width: 50%;
}

.iconed svg,
label svg {
    margin-right: 0.3em;
    align-items: center;
    position: relative;
    top: -2px;
}

.mobile_only {
    display: none;
}

.marginized {
    margin: 0.1em;
}

.post_box > article p,
.post_box > article h1,
.post_box > article h2,
.post_box > article h3,
.post_box > article h4,
.post_box > article h5,
.post_box > article pre,
.post_box > article table {
    margin-left: 0.8rem;
    margin-right: 0.8rem;
}

.post_box > article ol,
.post_box > article ul {
    padding-right: 0.5rem;
}

@keyframes fadeout {
    0% {
        opacity: 1;
    }
    25% {
        opacity: 0.75;
    }
    75% {
        opacity: 0.25;
    }
    100% {
        opacity: 0;
    }
}

@keyframes fadein {
    0% {
        opacity: 0;
    }
    25% {
        opacity: 0.25;
    }
    75% {
        opacity: 0.75;
    }
    100% {
        opacity: 1;
    }
}

.fadeout {
    animation: fadeout 0.1s;
}

.fadein {
    animation: fadein 0.1s;
}

@media only screen and (max-width: 600px) {
    body {
        padding-left: 0;
        padding-right: 0;
    }

    .fadein {
        animation: fadein 0.2s;
    }

    .dynamic_table {
        column-gap: 0;
        display: grid;
        row-gap: 2em;
        grid-template-columns: 50% 50%;
    }

    .iconed {
        justify-self: left;
    }

    .banner {
        border-radius: 0;
    }

    .prime img {
        border-radius: 0;
    }

    .spaced {
        padding: 0.5em;
    }

    .stands_out,
    .feed_item {
        border-radius: 0;
    }

    .feed_item {
        border: none;
        border-top: 1px solid $frame;
        padding-top: 1em;
        margin-bottom: 0.5em;
    }

    .popup_body {
        width: 80%;
    }

    a:hover {
        filter: none;
    }

    .realm_tag {
        font-size: x-small;
    }

    .db_cell {
        font-size: medium;
    }

    article img {
        width: 100%;
    }

    .mobile_only {
        display: inline;
    }

    .prime .post_head,
    .post_head {
        border-radius: 0;
    }

    #tag_cloud {
        font-size: 80%;
    }

    .icon_link {
        font-size: small;
    }

    .desktop_only {
        display: none;
    }

    .prime h1 {
        font-size: 200%;
    }
}

.bottom_spaced {
    margin-bottom: 1em;
}

